Make tests runnable again

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 unzip = true
-parts = instance omelette zopepy
+parts = instance omelette zopepy test
 extends = http://dist.plone.org/release/4.3-latest/versions.cfg
 versions = versions
 develop = .
@@ -28,3 +28,10 @@ recipe = zc.recipe.egg
 eggs = ${instance:eggs}
 interpreter = zopepy
 scripts = zopepy
+
+[test]
+recipe = zc.recipe.testrunner
+defaults = ['--auto-color', '--auto-progress']
+eggs =
+    ${instance:eggs}
+    collective.alias [test]
